--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@icon-park/vue-next": "^1.4.2",
+    "axios": "^1.2.2",
+    "path": "^0.12.7",
+    "pinia": "^2.0.28",
+    "swiper": "^8.4.5",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
